# Chess-UI

./: Cargo.toml
src/: board.rs  extra.rs  main.rs  movegen.rs  ui.rs
src/board/: makemove.rs
src/ui/: config.rs  engine.rs  engine_processing.rs  settings.rs  styling.rs  tournament.rs  tournament_log.txt  ui.rs
src/ui/styling/: container.rs  overlay.rs
